# aevi

./: .gitignore  README.md
backend/: .env.local  config.py  main.py  pyproject.toml  report.json
backend/.deepeval/: .deepeval-cache.json
backend/eval/: run_eval.py  test_agent.py  test_chat.py  test_completion.py
backend/eval/datasets/: agent_tests.json  chat_tests.json
backend/eval/outputs/: chat_ollama_qwen3.5_9b.json  completions_ollama_codellama.json  completions_ollama_qwen3.5_9b.json
backend/routers/: agent.py  chat.py  completion.py  models.py
backend/services/: llm.py  rag.py  tools.py
extension/: .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  eslint.config.mjs  package-lock.json  package.json
extension/backend/: .gitignore  config.py  pyproject.toml  requirements.txt  runtime_hook.py
extension/backend/.deepeval/: .deepeval  .deepeval_telemetry.txt  .latest_test_run.json
extension/backend/routers/: agent.py  completion.py  models.py
extension/backend/services/: llm.py  rag.py  tools.py
extension/src/: chatPanel.ts  completionProvider.ts  extension.ts
extension/webview_dist/: index.html
extension/webview_dist/assets/: index-BMH-9yCt.js  index-C84YoZym.css
outputs/: chat_ollama_qwen3.5_9b.json
webview-ui/: index.html  package-lock.json  package.json
webview-ui/src/: App.tsx  app.css  main.tsx
webview-ui/src/components/: AgentMessage.tsx  ChatMessage.tsx  FileIcon.tsx  ModeSelector.tsx  ModelPicker.tsx
