[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.2.25",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lancedb>=0.30.1",
    "litellm>=1.82.5",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "tree-sitter-languages>=1.10.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "deepeval>=3.9.2",
    "ollama>=0.6.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-json-report>=1.5.0",
]
